# poligon_alib_test_draw

./: .gitignore  CMakeLists.txt  main.cpp  main.qml  qtdef.cmake  windeploy.cmd
Pie/: CMakeLists.txt  PieObj.qml  antrender.cpp  antrender.h  pie.cpp  pie.h
VxAnt/: CMakeLists.txt  CfgListView.qml  JSONListModel.qml  PageSta.qml  PageYch.qml  PainterView.qml  PoligonBackend.qml  RenderControlsForm.ui.qml  StaView.qml  YchView.qml  fileio.cpp  fileio.h  highdpifix.cpp  linuxcasetransformpathfunction.cpp  linuxcasetransformpathfunction.h  logger.cpp  logger.h  myprop_helpers.h  poligonsimplepainter.cpp  poligonsimplepainter.h  smartsta.cpp  smartsta.h  smartych.cpp  smartych.h  stalist.cpp  stalist.h  ychlist.cpp  ychlist.h
